# fido

./: .gitignore  Cargo.toml  README.md  crates.js  search-index.js  settings.html  source-files.js
.github/workflows/: audit.yaml  build-releases.yaml  build-releases.yml  ci.yaml  coverage.yml  docs.yaml  github-pages-rust-doc.yaml  nightly.yml  release.yaml  rust-ci.yaml
docs/source/: conf.py  index.rst
fido/: all.html  fn.main.html  index.html  sidebar-items.js
fido/lib/: index.html  sidebar-items.js
fido/lib/cli/: fn.build_cli.html  fn.print_completions.html  fn.process_matches.html  index.html  sidebar-items.js  struct.Context.html
fido/lib/integrations/: index.html  sidebar-items.js
fido/lib/integrations/business_central/: fn.get_order.html  fn.process_matches.html  index.html  sidebar-items.js  struct.Config.html
fido/lib/integrations/business_central/cli/: fn.build_command.html  fn.process_matches.html  index.html  struct.Config.html
fido/lib/integrations/zendesk/: index.html
fido/lib/integrations/zendesk/cli/: fn.build_command.html  fn.process_matches.html  index.html  sidebar-items.js  struct.Config.html
implementors/core/fmt/: trait.Debug.js
implementors/core/marker/: trait.Freeze.js  trait.Send.js  trait.Sync.js  trait.Unpin.js
implementors/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
implementors/serde/de/: trait.Deserialize.js
src/: cli.rs  integrations.rs  main.rs
src/fido/: main.rs.html
src/fido/lib/: cli.rs.html  mod.rs.html
src/fido/lib/integrations/: business_central.rs.html  mod.rs.html
src/fido/lib/integrations/business_central/: cli.rs.html  mod.rs.html
src/fido/lib/integrations/zendesk/: cli.rs.html  mod.rs.html
src/integrations/: python.rs  shelby.rs  zendesk.rs
src/integrations/business_central/: cli.rs
src/integrations/python/: cli.rs
src/integrations/shelby/: cli.rs
src/integrations/zendesk/: cli.rs
src/lib/: cli.rs  mod.rs
src/lib/integrations/: business_central.rs  mod.rs
src/lib/integrations/business_central/: cli.rs
src/lib/integrations/zendesk/: cli.rs
