[package]
name = "fido"
description = "Internal CLI used for automation and testing"
version = "0.1.0"
edition = "2021"
authors = ["Bradley Reynolds <bradley.reynolds@darbia.dev>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/darbiadev/fido/"
keywords = ["cli"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.36.0", features = ["full"] }
clap = { version = "4.5.1", features = ["cargo"] }
clap_complete = "4.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tracing-appender = "0.2"
zendesk = { git = "https://github.com/darbiadev/zendesk-rs" }
shelby = { git = "https://github.com/darbiadev/shelby", version = "0.1.0" }
figment = { version = "0.10.14", features = ["env", "toml"] }
dirs = "5.0.1"
futures = "0.3.30"
pyo3 = { version = "0.20.3", features = ["auto-initialize"] }
